[package]
name = "bevy_enum_tag"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.87", features = ["full"] }
quote = { version = "1.0.37" }
proc-macro2 = { version = "1.0.89" }
convert_case = "0.6.0"

[dev-dependencies]
bevy = { version = "0.15.0-rc.3", default-features = false }
